Change leader avatar from 'AM' to 'MJ'

--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
           <div style="flex: 1; min-width: 220px">
             <h3 style="margin-top: 0">Leaders</h3>
             <div style="display: flex; gap: 10px; align-items: center">
-              <div class="leader-avatar">AM</div>
+              <div class="leader-avatar">MJ</div>
               <div class="leader-avatar">BK</div>
               <div class="leader-avatar">CN</div>
               <a
