Update leader information for Jacob Mayeku Watsuna

--- a/about.html
+++ b/about.html
@@ -108,8 +108,8 @@
             <p class="muted">Meet the student leaders who guide BANSA's programs and chapters.</p>
             <div class="team-grid">
               <div class="leader-card">
-                <div class="leader-avatar" aria-hidden="true">AM</div>
-                <div class="leader-name">Alice Musoke</div>
+                <div class="leader-avatar" aria-hidden="true">JM</div>
+                <div class="leader-name">Jacob Mayeku Watsuna</div>
                 <div class="leader-role">National President</div>
                 <div class="leader-bio">Student leader focused on chapter growth and student welfare across institutions.</div>
               </div>
